// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TableRowIcon should match snapshot given job type is MOVE_FILE 1`] = `
<body>
  <div>
    <span
      aria-label="MOVE_FILE"
      class=""
      data-mui-internal-clone-element="true"
    >
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
        data-testid="DriveFileMoveIcon"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M20 6h-8l-2-2H4c-1.1 0-2 .9-2 2v12c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V8c0-1.1-.9-2-2-2zm-6 12v-3h-4v-4h4V8l5 5-5 5z"
        />
      </svg>
    </span>
  </div>
</body>
`;

exports[`TableRowIcon should match snapshot given job type is MOVE_FOLDER 1`] = `
<body>
  <div>
    <span
      aria-label="MOVE_FOLDER"
      class=""
      data-mui-internal-clone-element="true"
    >
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
        data-testid="DriveFileMoveIcon"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M20 6h-8l-2-2H4c-1.1 0-2 .9-2 2v12c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V8c0-1.1-.9-2-2-2zm-6 12v-3h-4v-4h4V8l5 5-5 5z"
        />
      </svg>
    </span>
  </div>
</body>
`;

exports[`TableRowIcon should match snapshot given job type is RENAME_FILE 1`] = `
<body>
  <div>
    <span
      aria-label="RENAME_FILE"
      class=""
      data-mui-internal-clone-element="true"
    >
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
        data-testid="DriveFileRenameOutlineIcon"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M18.41 5.8 17.2 4.59c-.78-.78-2.05-.78-2.83 0l-2.68 2.68L3 15.96V20h4.04l8.74-8.74 2.63-2.63c.79-.78.79-2.05 0-2.83zM6.21 18H5v-1.21l8.66-8.66 1.21 1.21L6.21 18zM11 20l4-4h6v4H11z"
        />
      </svg>
    </span>
  </div>
</body>
`;

exports[`TableRowIcon should match snapshot given job type is RENAME_FOLDER 1`] = `
<body>
  <div>
    <span
      aria-label="RENAME_FOLDER"
      class=""
      data-mui-internal-clone-element="true"
    >
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
        data-testid="DriveFileRenameOutlineIcon"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M18.41 5.8 17.2 4.59c-.78-.78-2.05-.78-2.83 0l-2.68 2.68L3 15.96V20h4.04l8.74-8.74 2.63-2.63c.79-.78.79-2.05 0-2.83zM6.21 18H5v-1.21l8.66-8.66 1.21 1.21L6.21 18zM11 20l4-4h6v4H11z"
        />
      </svg>
    </span>
  </div>
</body>
`;

exports[`TableRowIcon should match snapshot given job type is Random Job 1`] = `
<body>
  <div>
    <span
      aria-label="Random Job"
      class=""
      data-mui-internal-clone-element="true"
    >
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
        data-testid="TaskIcon"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M14 2H6c-1.1 0-1.99.9-1.99 2L4 20c0 1.1.89 2 1.99 2H18c1.1 0 2-.9 2-2V8l-6-6zm-3.06 16L7.4 14.46l1.41-1.41 2.12 2.12 4.24-4.24 1.41 1.41L10.94 18zM13 9V3.5L18.5 9H13z"
        />
      </svg>
    </span>
  </div>
</body>
`;

exports[`TableRowIcon should match snapshot given job type is UPLOAD_FILE 1`] = `
<body>
  <div>
    <span
      aria-label="UPLOAD_FILE"
      class=""
      data-mui-internal-clone-element="true"
    >
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
        data-testid="BackupIcon"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M19.35 10.04C18.67 6.59 15.64 4 12 4 9.11 4 6.6 5.64 5.35 8.04 2.34 8.36 0 10.91 0 14c0 3.31 2.69 6 6 6h13c2.76 0 5-2.24 5-5 0-2.64-2.05-4.78-4.65-4.96zM14 13v4h-4v-4H7l5-5 5 5h-3z"
        />
      </svg>
    </span>
  </div>
</body>
`;
